2003-08-13  Paul Eggert  <eggert@twinsun.com>

	* argp-help.c, argp-parse.c, config.charset, getopt.h:
	Undo previous (whitespace-only) change.

2003-08-12  Paul Eggert  <eggert@twinsun.com>

	* argp-help.c, argp-parse.c, config.charset, getopt.h:
	Normalize leading white space and remove trailing white space.
	* ref-add.sin, ref-del.sin: Use '#' before empty line in copyright
	notice, as per ../config/srclist-update.
	
	Merge from coreutils.
	* euidaccess.h: New file.
	* euidaccess.c: Include it.
	* .cppi-disable: Add printf-args.h, printf-parse.h, stdbool_.h,
	vasnprintf.h, vasprintf.h.  Remove strdup.c, gettext.h.
	* regex.h, strdup.c, strtoll.c, strtoul.c: Normalize white space.
	
2003-08-11  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (local_wcslen): New function, for Solaris 2.5.1.
	(vasnprintf): Use it instead of wcslen.

2003-08-11  Bruno Haible  <bruno@clisp.org>

	* stdbool_.h (_Bool): Undo last change; instead use a negative enum
	value to ensure that _Bool promotes to int. Use #define for _Bool when
	using the Solaris C compiler. Adds comments suggested by Paul Eggert.

2003-08-10  Karl Berry  <karl@gnu.org>

	* regex.h: update from libc (whitespace fix).

2003-08-09  Paul Eggert  <eggert@twinsun.com>

	Merge some files from coreutils.  These changes were
	originally made by Jim Meyering.
	* lib/acl.c: Include <sys/types.h> before <sys/stat.h>;
	many older Unixes require this.
	* lib/alloca.c (alloca): Remove cast to argument of free;
	no longer needed in C89.
	* lib/alloca_.h, lib/regex.h: Fix white space to match
	what GNU indent does.

2003-08-05  Paul Eggert  <eggert@twinsun.com>

	* bumpalloc.h: Remove.

2003-08-04  Paul Eggert  <eggert@twinsun.com>

	* getloadavg.c: Change copyright notice and spacing to conform to
	GNU coding style.

	Merge from coreutils.
	* error.c [!USE_IN_LIBIO]: Omit this case; assume USE_IN_LIBIO is 1.
	From glibc.
	* getdate.y (date): Also accept dates like May-23-2003; suggestion