@@ -1,5 +1,8 @@
 2003-08-13  Paul Eggert  <eggert@twinsun.com>
 
+	* exclude.m4 (gl_EXCLUDE): Require AC_C_INLINE, AC_HEADER_STDC.
+	Check for isascii.
+
 	* gettext.m4, iconv.m4, intdiv0.m4, inttypes-pri.m4, lib-link.m4,
 	lib-prefix.m4, longdouble.m4, po.m4, progtest.m4, signed.m4:
 	Undo previous (whitespace-only) change.
